# jaxlab

./: .gitignore  pyproject.toml
jaxlab/: basics.py  benchmark.py  experiment.py
