[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jaxlab"
version = "0.1.0"
description = "A package for running JAX-based reinforcement learning experiments"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Christopher Serrano", email = "cserrano@gmail.com" }
]
dependencies = [
    "jaxmarl",
]

[project.optional-dependencies]
dev = [
    "black",
    "mypy",
    "pytest",
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"